<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_apriltag_interfaces</name>
  <version>0.20.0</version>
  <description>Package containing message definitions for fiducials</description>
  <maintainer email="zzv@misorobotics.com">Zach Zweig-Vinegar</maintainer>
  <license>BSD</license>
  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
